# pact

./: .gitignore  CAPABILITIES.md  CLAUDE.md  LICENSE  Makefile  PACT_KEY_STANDARD.md  README.md  component_map.yaml  config.yaml  constraints.yaml  prompt.md  pyproject.toml  schema_hints.yaml  task.md  task_r2.md  task_r3.md  trust_policy.yaml
.claude/commands/: craft-task.md
.github/workflows/: ci.yml  publish.yml
.kin/: config
docs/: index.html
src/pact/: __init__.py  access_graph.py  adopt.py  analyzer.py  arbiter.py  archive.py  assessor.py  auditor.py  budget.py  certification.py  checklist_gen.py  ci.py  cli.py  codebase_analyzer.py  config.py  constrain.py  contracts.py  daemon.py  decomposer.py  deploy.py  design_doc.py  diagnoser.py  drift.py  events.py  health.py  implementer.py  incidents.py  integrator.py  interface_stub.py  kindex_integration.py  ledger.py  lifecycle.py  mcp_server.py  pitch_utils.py  project.py  quality.py  register.py  remediator.py  research_cache.py  resolution.py  (+18 more)
tests/: test_adopt.py  test_analyzer.py  test_approve_matching.py  test_archive.py  test_artifact_metadata.py  test_assessor.py  test_auditor.py  test_budget.py  test_build_mode.py  test_cache_threading.py  test_checklist_gen.py  test_cli_niceties.py  test_cli_tasks.py  test_cli_testgen.py  test_codebase_analyzer.py  test_compact_context.py  test_config.py  test_context_compression.py  test_contracts.py  test_daemon.py  test_daemon_activity.py  test_decomposer.py  test_decomposer_modes.py  test_design_doc.py  test_diagnoser.py  test_directive.py  test_drift.py  test_environment.py  test_error_classification.py  test_event_sourcing.py  test_events.py  test_external_deps.py  test_focused_contract.py  test_gemini_backend.py  test_git_read.py  test_health.py  test_hierarchy.py  test_implementer.py  test_incidents.py  test_incremental_validation.py  (+47 more)
tests/smoke/: test_pact_adopt.py  test_pact_agents_base.py  test_pact_agents_contract_author.py  test_pact_agents_shaper.py  test_pact_auditor.py  test_pact_backends_claude_code.py  test_pact_cli.py  test_pact_contracts.py  test_pact_daemon.py  test_pact_decomposer.py  test_pact_design_doc.py  test_pact_events.py  test_pact_human_context.py  test_pact_human_git.py  test_pact_human_slack.py  test_pact_incidents.py  test_pact_mcp_server.py  test_pact_pitch_utils.py  test_pact_quality.py  test_pact_register.py  test_pact_remediator.py  test_pact_research_cache.py  test_pact_resolution.py  test_pact_retrospective.py  test_pact_signals.py  (+59 more)
(+52 files in other folders)
