[project]
name = "pact-agents"
version = "0.1.0"
description = "Contract-first multi-agent software engineering. Contracts before code. Tests as law. Agents that can't cheat."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "J. Andrew McEntire", email = "j.andrew.mcentire@gmail.com"},
]
keywords = ["multi-agent", "llm", "contracts", "testing", "software-engineering", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://jmcentire.github.io/pact/"
Repository = "https://github.com/jmcentire/pact"
Documentation = "https://jmcentire.github.io/pact/"

[project.scripts]
pact = "pact.cli:main"

[project.optional-dependencies]
llm = [
    "anthropic>=0.40",
]
openai = [
    "openai>=1.0",
]
gemini = [
    "google-genai>=1.0",
]
all-backends = [
    "anthropic>=0.40",
    "openai>=1.0",
    "google-genai>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pact"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-x -q"
